@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5915 2008/02/11 01:36:33 walito Exp $
+ * $Id: ChangeLog,v 1.5916 2008/02/11 02:20:13 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,11 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2008-02-11 16:11 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
+  * source/compiler/genc.c
+  * source/compiler/harbour.c
+    * Memory leak
+    
 2008-02-10 09:45 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
   * source/compiler/harbour.slx
   * source/macro/macro.slx
